Archive2/fc/6076672c38be76/output
main.cpp:1:37: error: 'ulword' has not been declared
 template <typename TAs, typename T, ulword n>
                                     ^
main.cpp:2:1: error: 'inlinealways' does not name a type
 inlinealways typename std::conditional<std::is_const<T>::value, const TAs, TAs>::type ( &array_cast( T( &array )[ n ] ) )[ ( n * sizeof( T ) ) / sizeof( TAs ) ] {
 ^
